--- a/_posts/2023-11-21-xml.md
+++ b/_posts/2023-11-21-xml.md
@@ -6,6 +6,7 @@ tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistema
 img_path: /assets/img/xml/
 ---
 
+{:.section}
 ## ¿Qué es XML?
 
 XML (eXtensible Markup Language, Lenguaje de Marcado eXtensible) es un lenguaje desarrollado por W3C (World Wide Web Consortium) que está basado en SGML (Standard Generalized Markup Language, Lenguaje de Marcado Generalizado Estándar).
@@ -22,6 +23,7 @@ XML es un metalenguaje, es decir, puede ser empleado para definir otros lenguaje
 - LaTeX
 - Etc.
 
+{:.section}
 ## Elementos
 
 Los documentos XML están formados por texto plano (sin formato) y contienen marcas (etiquetas) definidas por el desarrollador. Dichas marcas, es recomendable que sean lo más descriptivas posible y, para escribirlas, se utilizan los caracteres menor que "<", mayor que ">" y barra inclinada "/".
@@ -40,6 +42,7 @@ La sintaxis utilizada en el ejemplo es la básica para escribir un elemento en X
 
 Obsérvese que, entre la etiqueta de inicio (`<nombre>`) y la etiqueta de fin (`</nombre>`) se ha escrito el dato (valor) que se quiere almacenar. En este caso Elsa.
 
+{:.subsection}
 ### Elementos vacíos
 
 En un documento XML, un elemento puede no contener ningún valor. En tal caso hay que escribir:
@@ -66,6 +69,7 @@ O también:
 <nombre/>
 ```
 
+{:.subsection}
 ### Relaciones padre-hijo entre elementos
 
 EJEMPLO Por otra parte, un elemento (padre) puede contener a otro u otros elementos (hijos):
@@ -87,6 +91,7 @@ En este ejemplo, el elemento "persona" contiene cuatro elementos (hijos): "nombr
 
 Véase que, de todos los elementos que aparecen en este ejemplo, sólo el elemento "mujer" está vacío.
 
+{:.subsection}
 ### Elemento raíz de un documento XML
 
 **Todo documento XML tiene que tener un único elemento raíz (padre) del que desciendan todos los demás**. En este caso, el elemento raíz es "persona". Gráficamente, la estructura de elementos de este documento se puede representar como se muestra a continuación:
@@ -96,6 +101,7 @@ _Estructra de elementos de un documento XML persona_
 
 De esta forma, **la estructura de cualquier documento XML se puede representar como un árbol invertido de elementos**. Se dice que los elementos son los que dan estructura semántica al documento.
 
+{:.subsection}
 ### Elementos con contenido mixto
 
 EJEMPLO Un elemento puede contener contenido mixto, es decir, texto y otros elementos:
@@ -108,6 +114,7 @@ EJEMPLO Un elemento puede contener contenido mixto, es decir, texto y otros elem
 
 En este ejemplo, el elemento "persona" contiene los elementos "nombre" y "ciudad", además de los textos " vive en " y ".".
 
+{:.section}
 ## Normas de sintaxis básicas
 
 En un documento XML, **todos los nombres de los elementos son case sensitive**, es decir, sensibles a letras minúsculas y mayúsculas, teniendo que cumplir las siguientes normas:
@@ -167,6 +174,7 @@ En cuanto al carácter guion medio "-" y al punto ".", aunque también están pe
 {:.question}
 ¿Qué significa que XML es case sensitive?
 
+{:.section}
 ## Atributos en XML
 
 Los elementos de un documento XML pueden tener atributos definidos en la etiqueta de inicio. **Un atributo sirve para proporcionar información extra sobre el elemento que lo contiene**.
@@ -199,6 +207,7 @@ Si, por ejemplo, el atributo codigo se quisiera representar como un elemento, se
 
 Como se puede apreciar, ahora el valor del código no se ha escrito entre comillas dobles.
 
+{:.subsection}
 ### Normas de sintaxis
 
 EJEMPLO Los nombres de los atributos deben cumplir las mismas normas de sintaxis que los nombres de los elementos. Además, todos los atributos de un elemento tienen que ser únicos. Por ejemplo, es incorrecto escribir:
@@ -215,10 +224,12 @@ Sin embargo, sí es correcto escribir:
 
 Los atributos contenidos en un elemento, como en este caso x, X e y, deben separarse con espacios en blanco, no siendo significativo su orden.
 
+{:.section}
 ## Declaración XML
 
 La declaración XML que se puede escribir al principio de un documento XML, empieza con los caracteres `<?` y termina con `?>` al igual que las instrucciones de procesamiento. Sin embargo, la declaración XML no es una instrucción de procesamiento (o proceso).
 
+{:.subsection}
 ### Atributos version y encoding
 
 EJEMPLO Un documento XML podría contener la siguiente declaración XML:
@@ -231,6 +242,7 @@ En esta declaración XML, se está indicando que 1.0 es la versión de XML utili
 
 En un documento XML no es obligatorio que aparezca la declaración XML. Ahora bien, si se incluye, tiene que aparecer en la primera línea del documento, y el carácter "<" debe ser el primero de dicha línea, es decir, antes no pueden aparecer espacios en blanco.
 
+{:.subsection}
 ### Cómo crear un documento XML
 
 EJEMPLO Si, por ejemplo, en el Bloc de notas de Microsoft Windows escribimos y guardamos (codificado en UTF-8) un archivo llamado "persona.xml" como se muestra en la siguiente imagen:
@@ -245,6 +257,7 @@ _Visualización del archivo persona.xml en Google Chrome_
 
 Como se puede ver, a la izquierda de los elementos que tienen hijos, en este caso persona y fecha_de_nacimiento, aparece un pequeño triángulo. Por otra parte, el elemento persona es el único que tiene un atributo.
 
+{:.subsection}
 ### Atributo standalone
 
 EJEMPLO En una declaración XML, además de los atributos version y encoding, también se puede escribir el atributo standalone, que puede tomar dos valores ("yes" o "no"):
@@ -259,10 +272,12 @@ En un documento XML, escribir la declaración XML es opcional. Pero, si se escri
 
 Por otra parte, cuando se escriba el atributo encoding, siempre deberá aparecer después de version. Y, respecto al atributo standalone, siempre que se escriba, deberá ser en último lugar.
 
+{:.section}
 ## Instrucciones de procesamiento
 
 En un documento XML, **una instrucción de procesamiento (processing instruction) sirve para indicar cierta información al programa que procese dicho documento**. Las instrucciones de proceso se escriben empezando con la pareja de caracteres `<?` y finalizando con `?>`.
 
+{:.subsection}
 ### Cómo asociar un archivo CSS a un documento XML
 
 EJEMPLO En un documento XML podría escribirse, por ejemplo, la siguiente instrucción de procesamiento:
@@ -306,6 +321,7 @@ _Visualización del archivo animales.xml en Google Chrome_
 
 En un documento XML, no es obligatorio que aparezcan instrucciones de procesamiento.
 
+{:.section}
 ## Referencias a entidades
 
 En XML existen algunos caracteres que son especiales por su significado y, para escribirlos en un documento XML, se pueden utilizar las referencias a entidades mostradas en la siguiente tabla:
@@ -338,6 +354,7 @@ _Visualización del archivo entidades.xml en Google Chrome_
 
 En el navegador web, se puede ver que donde se han escrito las referencias a entidades en el documento XML (por ejemplo `&lt;`), se muestran los caracteres correspondientes (por ejemplo`<`).
 
+{:.subsection}
 ### Caracteres problemáticos en XML: menor que (`<`) y ampersand (`&`)
 
 EJEMPLO En un documento XML, el carácter `<` es problemático porque indica el comienzo de una etiqueta. Por tanto, en vez de escribir, por ejemplo:
@@ -372,6 +389,7 @@ En su lugar se debe escribir lo siguiente:
 <condicion>a==1 &amp;&amp; b==2</condicion>
 ```
 
+{:.subsection}
 ### Uso de la comilla doble (`"`) y de la comilla simple (`'`) en atributos
 
 EJEMPLO Si el valor de un atributo se escribe entre comillas dobles (`"`), dicho valor no podrá contener dicho carácter. Por ejemplo, no es correcto escribir:
@@ -407,10 +425,12 @@ Por otro lado, los valores de atributos escritos entre comillas dobles (`"`) sí
 
 En estos casos, no es obligatorio usar las referencias a entidades, pero sí recomendable.
 
+{:.section}
 ## Referencias de caracteres
 
 En un documento XML se pueden escribir referencias de caracteres Unicode con los símbolos `&#`, seguidos del valor decimal o hexadecimal del carácter Unicode que se quiera representar y, finalmente, añadiendo el carácter punto y coma `;`.
 
+{:.subsection}
 ### Representación del carácter Euro (€) en XML
 
 EJEMPLO Dado el documento XML "productos.xml":
@@ -430,6 +450,7 @@ _Visualización del archivo productos.xml_
 
 Obsérvese que, en este caso, para representar al símbolo del Euro (`€`), la primera vez se ha utilizado su valor decimal (`&#8364;`) en Unicode y, la segunda vez, su valor hexadecimal (`&#x20AC;`).
 
+{:.section}
 ## Comentarios
 
 Para escribir comentarios en un documento XML, estos deben escribirse entre los caracteres `<!--` y `-->`. Por ejemplo:
@@ -477,6 +498,7 @@ EJEMPLO Por otro lado, hay que tener en cuenta que en los comentarios de un docu
 
 De forma que, **no es posible anidar comentarios en un documento XML**.
 
+{:.section}
 ## Secciones CDATA
 
 Un documento XML puede contener secciones CDATA (Character DATA) para escribir texto que no se desea que sea analizado. Por ejemplo, esto puede ser útil cuando se quiere escribir texto que contenga alguno de los caracteres problemáticos: menor que `<` o ampersand `&`.
@@ -512,6 +534,7 @@ Dentro de una sección CDATA no se puede escribir la cadena `]]>`. En consecuenc
 
 Por otra parte, no está permitido escribir espacios en blanco o saltos de línea en las cadenas de inicio `<![CDATA[` o fin`]]>` de una sección CDATA.
 
+{:.section}
 ## Espacios de nombres
 
 Varios documentos XML se pueden combinar entre sí, pudiendo en estos casos coincidir el nombre de algunos elementos.
@@ -535,6 +558,7 @@ EJEMPLO Dos documentos XML podrían contener un elemento llamado "carta", pero c
 </carta>
 ```
 
+{:.subsection}
 ### Uso de espacios de nombres
 
 De forma que, si se incluyen ambos elementos `<carta>` en un documento XML, se origina un conflicto de nombres. Para resolverlo, se pueden utilizar espacios de nombres (XML Namespaces). Por ejemplo, escribiendo:
@@ -563,6 +587,7 @@ De forma que, si se incluyen ambos elementos `<carta>` en un documento XML, se o
 </e1:ejemplo>
 ```
 
+{:.subsection}
 ### Sintaxis para definir un espacio de nombres
 
 Para definir un espacio de nombres se utiliza la siguiente sintaxis:
@@ -584,6 +609,7 @@ Los prefijos definidos son e1 y e2, respectivamente. Véase que, se han añadido
 - <http://www.w3.org/1999/XSL/Transform>
 - <http://www.w3.org/2000/svg>
 
+{:.subsection}
 ### Definición de espacios de nombres en elementos distintos al raíz
 
 EJEMPLO En un documento XML, los espacios de nombres pueden definirse en el elemento raíz (como acabamos de ver) o, directamente, en los elementos que los vayan a utilizar. Por ejemplo:
@@ -613,6 +639,7 @@ EJEMPLO En un documento XML, los espacios de nombres pueden definirse en el elem
 
 En un documento XML es posible definir todos los espacios de nombres que se necesiten, pudiéndose mezclar (si fuese necesario) los elementos de dichos espacios de nombres.
 
+{:.subsection}
 ### Definición de un espacio de nombres por defecto
 
 EJEMPLO Por otra parte, se puede definir un espacio de nombres por defecto mediante la siguiente sintaxis:
@@ -660,6 +687,7 @@ EJEMPLO En el siguiente ejemplo, inicialmente se define un espacio de nombres po
 </ejemplo>
 ```
 
+{:.subsection}
 ### Cómo indicar que un elemento no pertenece a ningún espacio de nombres
 
 EJEMPLO En un documento XML, para indicar que determinados elementos (o todos) no pertenecen a ningún espacio de nombres, se escribe el atributo xmlns vacío, es decir, `xmlns=""`.
@@ -689,10 +717,12 @@ EJEMPLO En un documento XML, para indicar que determinados elementos (o todos) n
 
 En este caso, el elemento `<pescados>` y sus hijos, no pertenecen a ningún espacio de nombres.
 
+{:.section}
 ## Espacios en blanco
 
 En un documento XML, los espacios en blanco, las tabulaciones y los retornos de carro pueden ser tratados de un modo especial.
 
+{:.subsection}
 ### Espacios en blanco en el contenido (texto) de un elemento
 
 EJEMPLO Dado el archivo XML "peliculas.xml":
@@ -716,6 +746,7 @@ _Visualización del archivo peliculas.xml en Google Chrome_
 
 Esto es debido a que, las tabulaciones, los retornos de carro y varios espacios en blanco contenidos en el texto de los elementos del documento, han sido representados como un único espacio en blanco.
 
+{:.subsection}
 ### Espacios en blanco en atributos
 
 EJEMPLO De igual modo ocurre con los valores de los atributos. Por ejemplo, dado el archivo "series.xml":
@@ -737,6 +768,7 @@ En un navegador web se podrá visualizar:
 ![Visualización del archivo series.xml en Google Chrome](series-xml-chrome.gif)
 _Visualización del archivo series.xml en Google Chrome_
 
+{:.section}
 ## Espacios en blanco entre elementos
 
 EJEMPLO Obsérvese que, los siguientes documentos XML contienen la misma información, pero, escrita de distinta forma:
@@ -763,6 +795,7 @@ _Visualización del archivo datos.xml en Google Chrome_
 
 Las aplicaciones que hacen uso de documentos XML suelen hacer este tratamiento de las tabulaciones, retornos de carro y espacios en blanco.
 
+{:.subsection}
 ### Uso del atributo xml:space
 
 EJEMPLO Por otra parte, los elementos de un documento XML pueden contener el atributo predefinido `xml:space` con el valor "preserve" para indicar que los espacios que aparecen en el contenido (texto) de dicho elemento, y sus sucesores, deben ser preservados:
@@ -779,6 +812,7 @@ Los únicos valores que admite el atributo `xml:space` son "preserve" y "default
 
 El valor "default" indica que la aplicación que haga uso del documento XML es la encargada de decidir cómo tratar los espacios en blanco. Ahora bien, aún indicando el valor "preserve", hay que tener en cuenta que no todos los programas que hacen uso de documentos XML reconocen este atributo.
 
+{:.section}
 ## Documentos XML bien formados y válidos
 
 Se dice que un documento XML está bien formado (well-formed document) cuando no tiene errores de sintaxis. Esto incluye los siguientes aspectos:
@@ -801,6 +835,7 @@ Por otro lado, se dice que un documento XML es válido (valid) cuando, además d
 - XML Schema.
 - RELAX NG (REgular LAnguage for XML Next Generation).
 
+{:.section}
 ## Bibliografía
 
 - <https://www.abrirllave.com/xml/que-es-xml.php>
