--- a/_posts/2023-11-19-tarea-03.md
+++ b/_posts/2023-11-19-tarea-03.md
@@ -1,9 +1,10 @@
 ---
-title: "Tarea: "
+title: "Tarea: TODO"
 date: 2023-11-19 9:00:00 +0100
 categories: [Inteligencia Artificial y Big Data, Sistemas de aprendizaje automático]
 tags: [inteligencia artificial y big data, sistemas de aprendizaje automático]
 img_path: /assets/img/tarea-03/
+math: true
 ---
 
 ## Entrega y presentación
@@ -26,10 +27,64 @@ La tarea se calificará como apto o no apto.
 ¿Cómo se lleva a cabo el producto escalar en python?
 
 {:.activity}
-###
+### Instala y configura Anaconda
+
+Instala y configura Anaconda con la aplicación de Notebook de Jupyter.
+
+> Puedes usar el artículo [Tutorial: Anaconda](/posts/tutorial-anaconda) como guía.
+{:.prompt-info}
 
 {:.activity}
-###
+### MatPlotLib
+
+Responde a las siguientes preguntas:
+
+- Plotting your first graph: ¿Qué significa plot en español?
+- Plotting your first graph: ¿Qué hace la función `linspace` de NumPy? ¿Qué parámetros recibe?
+- Plotting your first graph: ¿Qué hace la función `grid` de MatPlotLib?
+- Line style and color: ¿Qué es el `alpha level` cuando estamos dibujando funciones?
+- Saving a figure: ¿Se pueden guardar en formato imagen gráficas con MathPlotLib?
+- ¿Qué hace la función `plt.subplot(212)`?
+- Pylab *vs* Pyplot *vs* Matplotlib: ¿Si importamos MatPlotLib es necesario importar también PyPlot en algún caso?
+- Drawing text: ¿Cuál es el color por defecto de la flecha cuando usamos la función `annotate`?
+- Legends: ¿Qué propiedad debemos usar para colocar una leyenda donde sea más conveniente?
+- Scatter plot: Prueba a ejecutar el código varias veces. ¿Por qué obtenemos siempre el mismo resultado?
+- Lines: ¿Por qué si modificamos la función `axis` con un rango más amplio la recta magenta no termina pero la recta roja sí?
+
+
+{:.activity}
+### Vídeo de regresión lineal por DotCSV
+
+Mira el vídeo de [IA NOTEBOOK #1 \| Regresión Lineal y Mínimos Cuadrados Ordinarios \| Programando IA](https://youtu.be/w2RJ1D6kz-o?si=7jfMNFJbUnxW3Z2e) y haz el primer cuaderno.
+
+Responde a las siguientes preguntas:
+
+1. ¿Qué es la matriz transpuesta de otra matriz?
+1. ¿Qué es el determinante de una matriz?
+1. ¿Qué es la matriz inversa?
+1. ¿Cómo se obtiene la matriz inversa?
+1. ¿Qué propiedades tiene la matriz inversa?
+
+{:.activity}
+### Algebra lineal
+
+{:.activity}
+### NumPy
+
+- ¿Cuál es el rango (rank) de una matriz 6x7?
+- ¿Cuáles son las dimensiones (shape) de la siguiente matriz: $= \begin{pmatrix}
+10 & 10 & 10 & 10\\
+10  & 10 & 10 & 10\\
+10  & 10 & 10 & 10\\
+\end{pmatrix}
+$
+- 
+
+
+
+
+{:.activity}
+### Utiliza 
 
 {:.activity}
 ###
