--- a/_posts/2023-11-19-tarea-03.md
+++ b/_posts/2023-11-19-tarea-03.md
@@ -51,7 +51,6 @@ Responde a las siguientes preguntas:
 - Scatter plot: Prueba a ejecutar el código varias veces. ¿Por qué obtenemos siempre el mismo resultado?
 - Lines: ¿Por qué si modificamos la función `axis` con un rango más amplio la recta magenta no termina pero la recta roja sí?
 
-
 {:.activity}
 ### Vídeo de regresión lineal por DotCSV
 
@@ -78,10 +77,7 @@ Responde a las siguientes preguntas:
 10  & 10 & 10 & 10\\
 \end{pmatrix}
 $
-- 
-
-
-
+- hola
 
 {:.activity}
 ### Utiliza 
