--- a/_posts/2023-11-19-tarea-03.md
+++ b/_posts/2023-11-19-tarea-03.md
@@ -1,5 +1,5 @@
 ---
-title: "Tarea: TODO"
+title: "Tarea: Introducción a Jupyter Notebooks"
 date: 2023-11-19 9:00:00 +0100
 categories: [Inteligencia Artificial y Big Data, Sistemas de aprendizaje automático]
 tags: [inteligencia artificial y big data, sistemas de aprendizaje automático]
@@ -37,19 +37,12 @@ Instala y configura Anaconda con la aplicación de Notebook de Jupyter.
 {:.activity}
 ### MatPlotLib
 
-Responde a las siguientes preguntas:
+Descarga el fichero tools_matplotlib_con_preguntas.ipynb lee, ejecuta en tu máquina local y responde a las preguntas que aparecen a lo largo del mismo.
 
-- Plotting your first graph: ¿Qué significa plot en español?
-- Plotting your first graph: ¿Qué hace la función `linspace` de NumPy? ¿Qué parámetros recibe?
-- Plotting your first graph: ¿Qué hace la función `grid` de MatPlotLib?
-- Line style and color: ¿Qué es el `alpha level` cuando estamos dibujando funciones?
-- Saving a figure: ¿Se pueden guardar en formato imagen gráficas con MathPlotLib?
-- ¿Qué hace la función `plt.subplot(212)`?
-- Pylab *vs* Pyplot *vs* Matplotlib: ¿Si importamos MatPlotLib es necesario importar también PyPlot en algún caso?
-- Drawing text: ¿Cuál es el color por defecto de la flecha cuando usamos la función `annotate`?
-- Legends: ¿Qué propiedad debemos usar para colocar una leyenda donde sea más conveniente?
-- Scatter plot: Prueba a ejecutar el código varias veces. ¿Por qué obtenemos siempre el mismo resultado?
-- Lines: ¿Por qué si modificamos la función `axis` con un rango más amplio la recta magenta no termina pero la recta roja sí?
+{:.activity}
+### NumPy
+
+Descarga el fichero tools_numpy_con_preguntas.ipynb lee, ejecuta en tu máquina local y responde a las preguntas que aparecen a lo largo del mismo.
 
 {:.activity}
 ### Vídeo de regresión lineal por DotCSV
@@ -67,17 +60,7 @@ Responde a las siguientes preguntas:
 {:.activity}
 ### Algebra lineal
 
-{:.activity}
-### NumPy
 
-- ¿Cuál es el rango (rank) de una matriz 6x7?
-- ¿Cuáles son las dimensiones (shape) de la siguiente matriz: $= \begin{pmatrix}
-10 & 10 & 10 & 10\\
-10  & 10 & 10 & 10\\
-10  & 10 & 10 & 10\\
-\end{pmatrix}
-$
-- hola
 
 {:.activity}
 ### Utiliza 
