--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -242,6 +242,24 @@ Hoy en día accedemos a sitios web desde todo tipo de dispositivos; ordenador, t
 </details>
 
 <details class="card mb-2">
+  <summary class="card-header question">¿Qué son las media queries?</summary>
+  <div class="card-body" markdown="1">
+
+Media queries o consultas sobre el medio permiten colocar diferentes propiedades en función de:
+
+- Si el medio es una pantalla o una impresora
+- El tamaño de la pantalla
+- La resolución de la pantalla
+- La orientación de la pantalla
+- Etc.
+
+Puedes visitar <https://www.w3schools.com/css/css3_mediaqueries.asp> para saber más.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
+
+<details class="card mb-2">
   <summary class="card-header question">¿Qué hago si quiero añadir dos clases al mismo elemento?</summary>
   <div class="card-body" markdown="1">
 
