--- a/_posts/2023-11-19-tarea-03.md
+++ b/_posts/2023-11-19-tarea-03.md
@@ -9,7 +9,7 @@ math: true
 
 ## Entrega y presentación
 
-La entrega será en formato PDF. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
+La entrega será en formato ZIP. Leer [Entrega y presentación de tareas](/posts/entrega-presentacion-tareas/).
 
 ## Calificación
 
@@ -60,10 +60,8 @@ Responde a las siguientes preguntas:
 {:.activity}
 ### Algebra lineal
 
-
-
 {:.activity}
-### Utiliza 
+### Utiliza
 
 {:.activity}
 ###
