--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -11,9 +11,8 @@ img_path: /assets/img/dtd/
 
 DTD (Document Type Definition, Definición de Tipo de Documento) sirve para definir la estructura de un documento SGML o XML, permitiendo su validación.
 
-SGML (Standard Generalized Markup Language, Lenguaje de Marcado Generalizado Estándar). Véase: <http://www.w3.org/MarkUp/SGML/>.
-
-XML (eXtensible Markup Language, Lenguaje de Marcado eXtensible) es un lenguaje desarrollado por W3C (World Wide Web Consortium) que está basado en SGML.
+- SGML (Standard Generalized Markup Language, Lenguaje de Marcado Generalizado Estándar). Véase: <http://www.w3.org/MarkUp/SGML/>.
+- XML (eXtensible Markup Language, Lenguaje de Marcado eXtensible) es un lenguaje desarrollado por W3C (World Wide Web Consortium) que está basado en SGML.
 
 En <http://www.w3.org/TR/xml/> se puede consultar la W3C Recommendation de XML, en la cual se fundamenta este tutorial, donde se explica –de forma introductoria a través de ejemplos– cómo escribir y utilizar DTD para validar documentos XML.
 
@@ -27,7 +26,7 @@ Existen otros métodos que también permiten validar documentos XML, como por ej
 Una DTD se puede escribir tanto interna como externamente a un archivo XML. Ahora bien, en ambos casos hay que escribir una definición DOCTYPE (Document Type Declaration, Declaración de Tipo de Documento) para asociar el documento XML a la DTD. Asimismo, un archivo XML se puede asociar simultáneamente a una DTD interna y externa.
 
 {:.subsection}
-## Documento XML asociado a una DTD interna
+### Documento XML asociado a una DTD interna
 
 La sintaxis para escribir una DTD interna es:
 
@@ -35,7 +34,7 @@ La sintaxis para escribir una DTD interna es:
 <!DOCTYPE elemento-raíz [ declaraciones ]>
 ```
 
-EJEMPLO En un documento XML se quiere guardar una lista de marcadores de páginas web, almacenando de cada uno de ellos su nombre, una descripción y su URL. Para ello, se puede escribir, por ejemplo, el archivo `marcadores-con-dtd-interna.xml` siguiente, que contiene una DTD interna:
+EJEMPLO En un documento XML se quiere guardar una lista de marcadores de páginas web, almacenando de cada uno de ellos su nombre, una descripción y su URL. Para ello, se puede escribir, por ejemplo, el archivo `marcadores-con-dtd-interna.xml`{: .filepath} siguiente, que contiene una DTD interna:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -67,26 +66,26 @@ EJEMPLO En un documento XML se quiere guardar una lista de marcadores de página
 ```
 {: file="marcadores-con-dtd-interna.xml" }
 
-- Obsérvese que, en la DTD se ha indicado que marcadores es el elemento raíz del documento XML, el cual puede contener cero o más páginas. Para indicar esto último, se ha escrito: (pagina)*
-- Escribiendo pagina (nombre, descripcion, url) se especifica que, cada elemento `pagina` tiene que contener tres elementos (hijos): `nombre`, `descripcion` y `url`.
+- Obsérvese que, en la DTD se ha indicado que marcadores es el elemento raíz del documento XML, el cual puede contener cero o más páginas. Para indicar esto último, se ha escrito: `(pagina)*`.
+- Escribiendo pagina (`nombre, descripcion, url`) se especifica que, cada elemento `pagina` tiene que contener tres elementos (hijos): `nombre`, `descripcion` y `url`.
 - Con `#PCDATA` (Parsed Character Data) escrito entre paréntesis `()` se indica que los elementos `nombre`, `descripcion` y `url` pueden contener texto (cadenas de caracteres) analizable por un procesador XML.
 
 Nota: al nombrar a los elementos `pagina` y `descripcion` no se han utilizado los caracteres (á) y (ó), respectivamente, para evitar posibles incompatibilidades con programas que puedan no reconocerlos.
 
-{:.subsubsection}
-## Visualización del archivo `marcadores-con-dtd-interna.xml` en un navegador web
+{:.subsection}
+#### Visualización del archivo "marcadores-con-dtd-interna.xml" en un navegador web
 
-Al ver el archivo `marcadores-con-dtd-interna.xml` en un navegador web, como por ejemplo Google Chrome, se visualizará algo similar a:
+Al ver el archivo `marcadores-con-dtd-interna.xml`{: .filepath} en un navegador web, como por ejemplo Google Chrome, se visualizará algo similar a:
 
-![marcadores-con-dtd-interna.xml en el Google Chrome](marcadores-con-dtd-interna-chrome.gif.png)
-_marcadores-con-dtd-interna.xml en el Google Chrome_
+![Visualización del archivo marcadores-con-dtd-interna.xml en Google Chrome](marcadores-con-dtd-interna-chrome.gif)
+_Visualización del archivo marcadores-con-dtd-interna.xml en Google Chrome_
 
 Como se puede observar, la DTD no se muestra en el navegador.
 
-Por otro lado, para comprobar que el documento XML escrito en este ejemplo es válido se pueden utilizar distintos programas. Por ejemplo, véase cómo validar un documento XML asociado a una DTD con XML Copy Editor.
+Por otro lado, para comprobar que el documento XML escrito en este ejemplo es válido se pueden utilizar distintos programas. Por ejemplo, véase cómo [validar un documento XML asociado a una DTD con XML Copy Editor](https://www.abrirllave.com/dtd/como-validar-con-xml-copy-editor-un-documento-xml-asociado-a-una-dtd.php).
 
 {:.subsection}
-## Documento XML asociado a una DTD externa
+### Documento XML asociado a una DTD externa
 
 Existen dos tipos de DTD externa: privada y pública. Para las privadas se utiliza `SYSTEM` y para las públicas `PUBLIC`. La sintaxis en cada caso es:
 
@@ -98,10 +97,10 @@ Existen dos tipos de DTD externa: privada y pública. Para las privadas se utili
 <!DOCTYPE elemento-raíz PUBLIC "identificador-público" "URI">
 ```
 
-{:.subsubsection}
-## DTD externa privada - SYSTEM
+{:.subsection}
+#### DTD externa privada - SYSTEM
 
-EJEMPLO Si en un archivo llamado `marcadores.dtd` se escribiese la siguiente DTD:
+EJEMPLO Si en un archivo llamado `marcadores.dtd`{: .filepath} se escribiese la siguiente DTD:
 
 ```xml
 <!ELEMENT marcadores (pagina)*>
@@ -109,9 +108,10 @@ EJEMPLO Si en un archivo llamado `marcadores.dtd` se escribiese la siguiente DTD
 <!ELEMENT nombre (#PCDATA)>
 <!ELEMENT descripcion (#PCDATA)>
 <!ELEMENT url (#PCDATA)>
-```{: file="marcadores.dtd" }
+```
+{: file="marcadores.dtd" }
 
-El siguiente documento XML llamado `marcadores-con-dtd-externa.xml`, sería válido:
+El siguiente documento XML llamado `marcadores-con-dtd-externa.xml`{: .filepath}, sería válido:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -134,12 +134,13 @@ El siguiente documento XML llamado `marcadores-con-dtd-externa.xml`, sería vál
       <url>http://www.w3.org/</url>
    </pagina>
 </marcadores>
-```{: file="marcadores-con-dtd-externa.xml" }
+```
+{: file="marcadores-con-dtd-externa.xml" }
 
 En este documento XML, haciendo uso de una DTD externa privada, se ha escrito una lista de marcadores de páginas web, guardando de cada uno de ellos su nombre, una descripción y su URL.
 
-{:.subsubsection}
-## DTD externa pública - `PUBLIC`
+{:.subsection}
+#### DTD externa pública - `PUBLIC`
 
 EJEMPLO El siguiente documento XML está asociado a una DTD externa pública:
 
@@ -160,14 +161,14 @@ EJEMPLO El siguiente documento XML está asociado a una DTD externa pública:
 - `-//W3C//DTD XHTML 1.0 Strict//EN` es un FPI (Formal Public Identifier, Identificador Público Formal).
 
 {:.subsection}
-## Cuándo utilizar una DTD interna o una DTD externa
+### Cuándo utilizar una DTD interna o una DTD externa
 
 Para validar más de un documento XML con la misma DTD, escribir esta en un archivo externo proporciona la ventaja de no tener que repetir la DTD internamente en cada documento XML.
 
 En el caso de que la DTD solo se utilice para validar un único documento XML, la DTD es habitual escribirla internamente.
 
 {:.subsection}
-## Uso combinado de DTD interna y externa en un documento XML
+### Uso combinado de DTD interna y externa en un documento XML
 
 Para asociar un documento XML a una DTD interna y externa simultáneamente, se pueden utilizar las siguientes sintaxis:
 
@@ -179,7 +180,7 @@ Para asociar un documento XML a una DTD interna y externa simultáneamente, se p
 <!DOCTYPE elemento-raíz PUBLIC "identificador-público" "URI" [ declaraciones ]>
 ```
 
-EJEMPLO Si en un documento XML llamado `marcadores-con-dtd-interna-y-externa.xml` se quiere almacenar una lista de marcadores de páginas web, guardando de cada uno de ellos su nombre, una descripción y su URL. En dicho documento se podría escribir:
+EJEMPLO Si en un documento XML llamado `marcadores-con-dtd-interna-y-externa.xml`{: .filepath} se quiere almacenar una lista de marcadores de páginas web, guardando de cada uno de ellos su nombre, una descripción y su URL. En dicho documento se podría escribir:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -205,7 +206,8 @@ EJEMPLO Si en un documento XML llamado `marcadores-con-dtd-interna-y-externa.xml
     <url>http://www.w3.org/</url>
   </pagina>
 </marcadores>
-```{: file="marcadores-con-dtd-interna-y-externa.xml" }
+```
+{: file="marcadores-con-dtd-interna-y-externa.xml" }
 
 De tal forma que, el contenido del archivo `marcadores.dtd` podría ser:
 
@@ -213,7 +215,8 @@ De tal forma que, el contenido del archivo `marcadores.dtd` podría ser:
 <!ELEMENT nombre (#PCDATA)>
 <!ELEMENT descripcion (#PCDATA)>
 <!ELEMENT url (#PCDATA)>
-```{: file="marcadores.dtd" }
+```
+{: file="marcadores.dtd" }
 
 {:.section}
 ## Estructura de un documento XML
@@ -359,7 +362,7 @@ Incluso, si el elemento `persona` estuviese vacío, el documento también sería
 ```
 
 {:.subsection}
-## Elementos vacíos - `EMPTY`
+### Elementos vacíos - `EMPTY`
 
 Para declarar un elemento vacío en una DTD, hay que indicar que su contenido es EMPTY. Un ejemplo de ello podría ser el elemento `br` del HTML, el cual sirve para hacer un salto de línea y no tiene contenido:
 
@@ -393,8 +396,8 @@ Por ejemplo, el siguiente documento XML sería válido:
 </etiquetas_html>
 ```
 
-{:.subsubsection}
-## Un elemento vacío puede tener atributos
+{:.subsection}
+#### Un elemento vacío puede tener atributos
 
 EJEMPLO Aunque un elemento se declare vacío, no pudiendo contener texto ni otros elementos, sí puede tener atributos:
 
@@ -414,7 +417,7 @@ EJEMPLO Aunque un elemento se declare vacío, no pudiendo contener texto ni otro
 En este ejemplo, para el elemento `br` se ha declarado el atributo `descripcion` de tipo `CDATA` (Character DATA), es decir, su valor puede ser una cadena de caracteres. Además, se ha indicado que el atributo es obligatorio escribirlo, `#REQUIRED`.
 
 {:.subsection}
-## Elementos con cualquier contenido - `ANY`
+### Elementos con cualquier contenido - `ANY`
 
 Cuando en una DTD se quiere declarar un elemento que pueda contener cualquier contenido –bien sea texto, otros elementos o una mezcla de ambos– 
 esto se puede hacer indicando que su contenido es de tipo ANY:
@@ -490,7 +493,7 @@ Por otra parte, si el elemento `cualquier_contenido` estuviese vacío, el docume
 En vez de `<cualquier_contenido></cualquier_contenido>`, también se puede escribir `<cualquier_contenido/>`.
 
 {:.subsection}
-## Elementos con contenido de tipo texto en una DTD - (`#PCDATA`)
+### Elementos con contenido de tipo texto en una DTD - (`#PCDATA`)
 
 Para declarar en una DTD un elemento que pueda contener texto analizable, se tiene que indicar que su contenido es (`#PCDATA`), (Parsed Character Data):
 
@@ -529,12 +532,12 @@ Ahora bien, el elemento `texto` podría estar vacío y el documento XML seguirí
 En vez de `<texto></texto>`, también se puede escribir `<texto/>`.
 
 {:.subsection}
-## Secuencias de elementos en una DTD
+### Secuencias de elementos en una DTD
 
 En una DTD, un elemento (padre) puede ser declarado para contener a otro u otros elementos (hijos). En la sintaxis, los hijos –también llamados sucesores– tienen que escribirse entre paréntesis `()` y separados por comas `,`.
 
-{:.subsubsection}
-## Elemento con varios hijos
+{:.subsection}
+#### Elemento con varios hijos
 
 EJEMPLO Para declarar un elemento (padre) que contenga tres elementos (hijos), se puede escribir:
 
@@ -582,8 +585,8 @@ A su vez, los hijos también pueden tener sus propios hijos. Así, el elemento `
 </persona>
 ```
 
-{:.subsubsection}
-## Orden de los hijos de un elemento
+{:.subsection}
+#### Orden de los hijos de un elemento
 
 En un documento XML, los elementos (hijos) de un elemento (padre), deben escribirse en el mismo orden en el que han sido declarados en la DTD.
 
@@ -615,7 +618,7 @@ EJEMPLO El siguiente documento XML no es válido:
 El documento no es válido porque los elementos sucesores (hijos) del elemento `fecha_de_nacimiento` no se han escrito en el mismo orden que en la DTD.
 
 {:.subsection}
-## Cardinalidad de los elementos
+### Cardinalidad de los elementos
 
 En una DTD, para definir el número de veces que pueden aparecer los elementos de un documento XML, se pueden utilizar los operadores de cardinalidad mostrados en la siguiente tabla:
 
@@ -627,8 +630,8 @@ En una DTD, para definir el número de veces que pueden aparecer los elementos d
 
 Nota: los elementos declarados en una DTD sobre los que no actúe ningún operador de cardinalidad, tendrán que aparecer obligatoriamente una única vez, en el o los documentos XML a los que se asocie.
 
-{:.subsubsection}
-## Operador de cardinalidad `+` (signo más)
+{:.subsection}
+#### Operador de cardinalidad `+` (signo más)
 
 EJEMPLO En el siguiente documento XML, el elemento `nombre` tiene que aparecer una o más veces. En este caso, aparece tres veces:
 
@@ -649,8 +652,8 @@ EJEMPLO En el siguiente documento XML, el elemento `nombre` tiene que aparecer u
 Si sobre nombre no actuase el operador (+) el documento no sería válido, ya que, el elemento `personas` solo tendría que contener un elemento `nombre`.
 En vez de (nombre+), también se puede escribir (nombre)+.
 
-{:.subsubsection}
-## Operador de cardinalidad `*` (asterisco)
+{:.subsection}
+#### Operador de cardinalidad `*` (asterisco)
 
 EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el elemento `nombre` tiene que aparecer una única vez. Ahora bien, el elemento `ingrediente` tiene cardinalidad (0-n), por tanto, puede aparecer cero, una o más veces:
 
@@ -671,8 +674,8 @@ EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el ele
 </receta_de_cocina>
 ```
 
-{:.subsubsection}
-## Operador de cardinalidad `?` (interrogación)
+{:.subsection}
+#### Operador de cardinalidad `?` (interrogación)
 
 EJEMPLO En la DTD del siguiente documento XML, la cardinalidad del elemento `mayor_de_edad` es (0-1), siendo opcional su aparición:
 
@@ -706,12 +709,12 @@ Así pues, el siguiente documento también es válido:
 ```
 
 {:.subsection}
-## Elementos opcionales
+### Elementos opcionales
 
 En la DTD asociada a un documento XML, se pueden declarar elementos que contengan elementos opcionales. Para ello, se utiliza el operador de elección, representado por una barra vertical (`|`).
 
-{:.subsubsection}
-## Operador de elección `|` (barra vertical)
+{:.subsection}
+#### Operador de elección `|` (barra vertical)
 
 EJEMPLO En el siguiente documento XML el elemento `articulo` puede contener un elemento `codigo` o un elemento `id`; obligatoriamente uno de ellos, pero no ambos:
 
@@ -728,8 +731,8 @@ EJEMPLO En el siguiente documento XML el elemento `articulo` puede contener un e
 </articulo>
 ```
 
-{:.subsubsection}
-## Operador de elección `|` y operador `*`
+{:.subsection}
+#### Operador de elección `|` y operador `*`
 
 EJEMPLO En la DTD del siguiente documento XML se indica que el elemento `articulos` puede contener varios elementos `codigo` e `id`:
 
@@ -761,8 +764,8 @@ Obsérvese que, con el operador `*`, en este ejemplo se ha indicado que el conte
 
 Nótese también que, dentro del elemento `articulos` pueden aparecer elementos `codigo` e `id` en cualquier orden.
 
-{:.subsubsection}
-## Operador de elección `|` en una secuencia de elementos
+{:.subsection}
+#### Operador de elección `|` en una secuencia de elementos
 
 EJEMPLO En el siguiente documento XML, pueden aparecer cero o más elementos `articulo` que contengan un elemento `codigo` o un elemento `id`, y obligatoriamente un elemento `nombre`:
 
@@ -788,8 +791,8 @@ EJEMPLO En el siguiente documento XML, pueden aparecer cero o más elementos `ar
 </articulos>
 ```
 
-{:.subsubsection}
-## Secuencia de elementos en una lista de opciones
+{:.subsection}
+#### Secuencia de elementos en una lista de opciones
 
 EJEMPLO En la DTD del siguiente documento XML se ha indicado que pueden aparecer cero o más elementos `localidad`. En el caso de aparecer, cada uno de ellos contendrá los elementos `pais` y `ciudad`, o alternativamente un elemento `codigo_postal`:
 
@@ -814,8 +817,8 @@ EJEMPLO En la DTD del siguiente documento XML se ha indicado que pueden aparecer
 </localidades>
 ```
 
-{:.subsubsection}
-## `#PCDATA` en una lista de opciones permite contenido mixto
+{:.subsection}
+#### `#PCDATA` en una lista de opciones permite contenido mixto
 
 EJEMPLO Al utilizar el operador de elección (`|`) en una DTD, si una de las opciones es `#PCDATA`, esta debe escribirse en primer lugar:
 
@@ -875,7 +878,7 @@ La sintaxis básica para declarar un atributo en una DTD es:
 ```
 
 {:.subsection}
-## Declaración de un atributo indicando un valor por defecto
+### Declaración de un atributo indicando un valor por defecto
 
 EJEMPLO En la DTD del siguiente documento XML se ha indicado que el elemento `f1` puede tener el atributo `pais`:
 
@@ -906,7 +909,7 @@ Al visualizar el documento XML en un navegador web, se verá algo parecido a:
 _Visualización del archivo deportitas.xml en Google Chrome_
 
 {:.subsection}
-## Declaración de varios atributos en un elemento
+### Declaración de varios atributos en un elemento
 
 EJEMPLO En la DTD del siguiente documento XML se ha indicado que el elemento `f1` puede tener tres atributos (pais, fecha_de_nacimiento y equipo):
 
@@ -960,7 +963,7 @@ Respecto a los otros tipos de declaración de atributos (#REQUIRED, #IMPLIED y #
 - Atributo con valor fijo - #FIXED valor
 
 {:.subsection}
-## Atributo obligatorio - #REQUIRED
+### Atributo obligatorio - #REQUIRED
 
 EJEMPLO En la DTD interna del siguiente documento XML se ha declarado un atributo indicando que es obligatorio, es decir, #REQUIRED:
 
@@ -990,7 +993,7 @@ En este ejemplo, es obligatorio escribir el atributo pais en los elementos `f1`.
 Por otra parte, fíjese que, de Rafael Nadal no es obligatorio indicar su país, ni se puede hacer.
 
 {:.subsection}
-## Atributo opcional - #IMPLIED
+### Atributo opcional - #IMPLIED
 
 EJEMPLO En una DTD, para especificar que un atributo es opcional escribirlo o no, hay que indicarlo mediante #IMPLIED:
 
@@ -1014,7 +1017,7 @@ EJEMPLO En una DTD, para especificar que un atributo es opcional escribirlo o no
 En este caso, el atributo pais es opcional para los elementos `f1` que aparezcan en el documento XML. Así pues, obsérvese que, aunque no se ha indicado el país de Fernando Alonso, el documento es válido.
 
 {:.subsection}
-## Atributo con valor fijo - #FIXED valor
+### Atributo con valor fijo - #FIXED valor
 
 EJEMPLO Cuando en una DTD, se quiere declarar un atributo que tome un valor fijo, esto se puede hacer con #FIXED valor:
 
@@ -1060,7 +1063,7 @@ En DTD, existen los siguientes tipos de atributos:
 | Especiales | Existen dos atributos especiales: xml:lang y xml:space.                                                                                                                                |
 
 {:.subsection}
-## Atributos de tipo CDATA
+### Atributos de tipo CDATA
 
 En una DTD, un atributo de tipo CDATA (Character DATA), es aquel cuyo valor puede ser una cadena de caracteres (texto).
 
@@ -1085,7 +1088,7 @@ EJEMPLO En la DTD del siguiente documento XML, el atributo pais del elemento `ci
 Obsérvese que, el valor del atributo pais puede estar vacío.
 
 {:.subsection}
-## Atributos de tipo enumerado
+### Atributos de tipo enumerado
 
 En una DTD, se puede declarar un atributo de tipo enumerado indicando que su valor puede ser uno de los pertenecientes a una lista de valores escritos entre paréntesis `()` y separados por el carácter `|`.
 
@@ -1124,7 +1127,7 @@ Por tanto, para Fernando Alonso se tendría que escribir:
 
 
 {:.subsection}
-## Atributos de tipo ID
+### Atributos de tipo ID
 
 En una DTD, los atributos declarados ID son aquellos que solo pueden tomar un valor único (identificador) para cada elemento.
 
@@ -1153,7 +1156,7 @@ En un documento XML, no pueden escribirse dos elementos que tengan el mismo valo
 Todo atributo declarado de tipo ID tiene que ser #IMPLIED (opcional) o #REQUIRED (obligatorio).
 
 {:.subsection}
-## Atributos de tipo IDREF
+### Atributos de tipo IDREF
 
 En una DTD, los atributos declarados IDREF son aquellos cuyo valor tiene que existir en otro atributo ID del documento XML.
 
@@ -1188,7 +1191,7 @@ Obsérvese que, por ejemplo, para la película Titanic se ha indicado en su atri
 En este documento XML, el atributo de tipo IDREF se ha definido obligatorio, #REQUIRED. Pero, a un atributo IDREF también se le puede especificar un valor por defecto, un valor fijo o que sea opcional escribirlo, #IMPLIED.
 
 {:.subsection}
-## Atributos de tipo IDREFS
+### Atributos de tipo IDREFS
 
 En una DTD, los atributos declarados IDREFS son aquellos cuyo valor puede ser una lista de valores que existan en otros atributos ID del documento XML.
 
@@ -1223,7 +1226,7 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que el valor del atribu
 Obsérvese que, los valores de la lista de valores de un atributo IDREFS, se escriben separados por un espacio en blanco.
 
 {:.subsection}
-## Atributos de tipo NMTOKEN
+### Atributos de tipo NMTOKEN
 
 En una DTD, los atributos declarados NMTOKEN son aquellos cuyo valor será una cadena de caracteres, pudiendo contener letras minúsculas, letras mayúsculas, números, puntos `.`, guiones medios `-`, guiones bajos `_` o el carácter dos puntos `:`.
 
@@ -1247,7 +1250,7 @@ EJEMPLO En la DTD del siguiente documento XML, el atributo clave del elemento `u
 En el valor de un atributo NMTOKEN no se pueden escribir espacios en blanco ni caracteres especiales, tales como: *, $, %, &, ?, @...
 
 {:.subsection}
-## Atributos de tipo NMTOKENS
+### Atributos de tipo NMTOKENS
 
 En una DTD, los atributos declarados NMTOKENS son aquellos cuyo valor puede contener uno o varios valores de tipo NMTOKEN separados por espacios en blanco.
 
@@ -1271,7 +1274,7 @@ EJEMPLO En la DTD del siguiente documento XML, el atributo codigos del elemento 
 Obsérvese que, los valores escritos en el atributo codigos, se escriben separados por espacios en blanco.
 
 {:.subsection}
-## Atributos de tipo NOTATION
+### Atributos de tipo NOTATION
 
 En una DTD, los atributos declarados NOTATION son aquellos cuyo valor puede ser el nombre de una notación.
 
@@ -1326,7 +1329,7 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que los elementos `prog
 CSharp 5.0 y Java 8.0 son identificadores públicos.
 
 {:.subsection}
-## Atributos de tipo ENTITY
+### Atributos de tipo ENTITY
 
 En una DTD, los atributos declarados ENTITY son aquellos cuyo valor puede ser el nombre de una entidad.
 
@@ -1357,7 +1360,7 @@ Con NDATA (Notation Data) se ha asociado a las entidades ballena y delfin con la
 La notación gif es una declaración del tipo MIME image/gif.
 
 {:.subsection}
-## Atributos de tipo ENTITIES
+### Atributos de tipo ENTITIES
 
 Atributos de tipo ENTITIES en DTD
 En una DTD, los atributos declarados ENTITIES son aquellos cuyo valor puede contener uno o varios valores de tipo ENTITY separados por espacios en blanco.
@@ -1394,7 +1397,7 @@ Con NDATA (Notation Data) se ha asociado a las entidades ballena, delfin, elefan
 La notación gif es una declaración del tipo MIME image/gif.
 
 {:.subsection}
-## Atributos especiales
+### Atributos especiales
 
 En DTD existen dos tipos de atributos especiales (predefinidos), llamados: xml:lang y xml:space.
 
@@ -1501,7 +1504,7 @@ Entidades paramétricas externas analizables
 Las entidades generales pueden utilizarse en el cuerpo de un documento XML y en su DTD. Sin embargo, las entidades paramétricas solo pueden utilizarse dentro de la DTD.
 
 {:.subsection}
-## Entidades generales internas analizables
+### Entidades generales internas analizables
 
 Para declarar una entidad general interna analizable (parsed) en una DTD, se utiliza la siguiente sintaxis:
 
@@ -1540,7 +1543,7 @@ Si este documento XML se visualizase en un navegador web, se vería algo parecid
 _Visualización del archivo textos.xml en Google Chrome_
 
 {:.subsection}
-## Entidades generales externas analizables
+### Entidades generales externas analizables
 
 En una DTD se pueden declarar dos tipos de entidades generales externas analizables (parsed): privadas y públicas. Para las privadas se utiliza SYSTEM, y para las públicas PUBLIC. La sintaxis en cada caso es:
 
@@ -1595,7 +1598,7 @@ EJEMPLO Para declarar escritor como entidad general externa analizable pública,
 ```
 
 {:.subsection}
-## Entidades generales externas no analizables
+### Entidades generales externas no analizables
 
 En una DTD, al igual que ocurre con las entidades generales externas analizables, se pueden declarar dos tipos de entidades generales externas no analizables (unparsed): privadas y públicas. Para las privadas se utiliza SYSTEM, y para las públicas PUBLIC. La sintaxis en cada caso es:
 
@@ -1649,7 +1652,7 @@ EJEMPLO Para declarar logo como entidad pública, se puede escribir:
 Véase que, se referencia al archivo <http://www.abrirllave.com/dtd/logo.gif>.
 
 {:.subsection}
-## Entidades paramétricas internas analizables
+### Entidades paramétricas internas analizables
 
 Para declarar una entidad paramétrica (de parámetro) interna analizable (parsed) en una DTD, se utiliza la siguiente sintaxis:
 
@@ -1748,7 +1751,7 @@ En este caso, el contenido del archivo "persona.dtd" podría ser:
 ```
 
 {:.subsection}
-## Entidades paramétricas externas analizables
+### Entidades paramétricas externas analizables
 
 En una DTD se pueden declarar dos tipos de entidades paramétricas externas analizables (parsed): privadas y públicas. Para las privadas se utiliza SYSTEM, y para las públicas PUBLIC. La sintaxis en cada caso es:
 
@@ -1811,7 +1814,7 @@ EJEMPLO Para declarar persona como entidad paramétrica externa analizable públ
 ```
 
 {:.subsection}
-## Uso de una entidad dentro de otra
+### Uso de una entidad dentro de otra
 
 EJEMPLO En la DTD del siguiente documento XML, se han declarado dos entidades generales internas analizables (color y frase):
 
@@ -2156,7 +2159,8 @@ EJEMPLO En la DTD interna del siguiente documento se han escrito dos comentarios
 </ciudades>
 ```
 
-{:.section}
 ## Bibliografía
 
 - <https://www.abrirllave.com/dtd/>
+- <https://www.abrirllave.com/dtd/como-validar-con-xml-copy-editor-un-documento-xml-asociado-a-una-dtd.php>
+- 
