me queda por revisar a partir de "4.12. Elementos opcionales"

--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -11,10 +11,10 @@ img_path: /assets/img/dtd/
 
 DTD (Document Type Definition, Definición de Tipo de Documento) sirve para definir la estructura de un documento SGML o XML, permitiendo su validación.
 
-- SGML (Standard Generalized Markup Language, Lenguaje de Marcado Generalizado Estándar). Véase: <http://www.w3.org/MarkUp/SGML/>.
-- XML (eXtensible Markup Language, Lenguaje de Marcado eXtensible) es un lenguaje desarrollado por W3C (World Wide Web Consortium) que está basado en SGML.
+- **SGML** (Standard Generalized Markup Language, Lenguaje de Marcado Generalizado Estándar). Véase: <http://www.w3.org/MarkUp/SGML/>.
+- **XML** (eXtensible Markup Language, Lenguaje de Marcado eXtensible) es un lenguaje desarrollado por W3C (World Wide Web Consortium) que está basado en SGML.
 
-En <http://www.w3.org/TR/xml/> se puede consultar la W3C Recommendation de XML, en la cual se fundamenta este tutorial, donde se explica –de forma introductoria a través de ejemplos– cómo escribir y utilizar DTD para validar documentos XML.
+En <http://www.w3.org/TR/xml/> se puede consultar la W3C Recommendation de XML, en la cual se fundamenta este tutorial, donde se explica -de forma introductoria a través de ejemplos- cómo escribir y utilizar DTD para validar documentos XML.
 
 Un documento XML es válido (valid) cuando, además de estar bien formado, no incumple ninguna de las normas establecidas en su estructura.
 
@@ -140,7 +140,7 @@ El siguiente documento XML llamado `marcadores-con-dtd-externa.xml`{: .filepath}
 En este documento XML, haciendo uso de una DTD externa privada, se ha escrito una lista de marcadores de páginas web, guardando de cada uno de ellos su nombre, una descripción y su URL.
 
 {:.subsection}
-#### DTD externa pública - `PUBLIC`
+#### DTD externa pública - PUBLIC
 
 EJEMPLO El siguiente documento XML está asociado a una DTD externa pública:
 
@@ -158,7 +158,7 @@ EJEMPLO El siguiente documento XML está asociado a una DTD externa pública:
 </html>
 ```
 
-- `-//W3C//DTD XHTML 1.0 Strict//EN` es un FPI (Formal Public Identifier, Identificador Público Formal).
+`-//W3C//DTD XHTML 1.0 Strict//EN` es un FPI (Formal Public Identifier, Identificador Público Formal).
 
 {:.subsection}
 ### Cuándo utilizar una DTD interna o una DTD externa
@@ -209,7 +209,7 @@ EJEMPLO Si en un documento XML llamado `marcadores-con-dtd-interna-y-externa.xml
 ```
 {: file="marcadores-con-dtd-interna-y-externa.xml" }
 
-De tal forma que, el contenido del archivo `marcadores.dtd` podría ser:
+De tal forma que, el contenido del archivo `marcadores.dtd`{: .filepath} podría ser:
 
 ```xml
 <!ELEMENT nombre (#PCDATA)>
@@ -228,7 +228,7 @@ En una DTD se pueden declarar:
 - Entidades
 - Notaciones
 
-Por tanto, un documento XML será válido si –además de no tener errores de sintaxis– cumple lo indicado en las declaraciones de elementos, atributos, entidades y notaciones, de la DTD a la que esté asociado.
+Por tanto, un documento XML será válido si -además de no tener errores de sintaxis- cumple lo indicado en las declaraciones de elementos, atributos, entidades y notaciones, de la DTD a la que esté asociado.
 
 {:.section}
 ## Declaración de elementos
@@ -244,9 +244,9 @@ En el tipo de contenido se especifica el contenido permitido en el elemento, pud
 - Texto, (`#PCDATA`).
 - Otros elementos (hijos).
 - Estar vacío, `EMPTY`.
-- Mixto (texto y otros elementos), `ANY`
+- Mixto (texto y otros elementos), `ANY`.
 
-**El contenido de un elemento puede ser texto - `(#PCDATA)`**
+**El contenido de un elemento puede ser texto - (`#PCDATA`)**
 
 EJEMPLO En el siguiente documento XML, el elemento `ciudad` puede contener cualquier texto (cadena de caracteres):
 
@@ -362,7 +362,7 @@ Incluso, si el elemento `persona` estuviese vacío, el documento también sería
 ```
 
 {:.subsection}
-### Elementos vacíos - `EMPTY`
+### Elementos vacíos - EMPTY
 
 Para declarar un elemento vacío en una DTD, hay que indicar que su contenido es EMPTY. Un ejemplo de ello podría ser el elemento `br` del HTML, el cual sirve para hacer un salto de línea y no tiene contenido:
 
@@ -417,10 +417,9 @@ EJEMPLO Aunque un elemento se declare vacío, no pudiendo contener texto ni otro
 En este ejemplo, para el elemento `br` se ha declarado el atributo `descripcion` de tipo `CDATA` (Character DATA), es decir, su valor puede ser una cadena de caracteres. Además, se ha indicado que el atributo es obligatorio escribirlo, `#REQUIRED`.
 
 {:.subsection}
-### Elementos con cualquier contenido - `ANY`
+### Elementos con cualquier contenido - ANY
 
-Cuando en una DTD se quiere declarar un elemento que pueda contener cualquier contenido –bien sea texto, otros elementos o una mezcla de ambos– 
-esto se puede hacer indicando que su contenido es de tipo ANY:
+Cuando en una DTD se quiere declarar un elemento que pueda contener cualquier contenido -bien sea texto, otros elementos o una mezcla de ambos- esto se puede hacer indicando que su contenido es de tipo ANY:
 
 ```xml
 <!ELEMENT cualquier_contenido ANY>
@@ -493,9 +492,9 @@ Por otra parte, si el elemento `cualquier_contenido` estuviese vacío, el docume
 En vez de `<cualquier_contenido></cualquier_contenido>`, también se puede escribir `<cualquier_contenido/>`.
 
 {:.subsection}
-### Elementos con contenido de tipo texto en una DTD - (`#PCDATA`)
+### Elementos con contenido de tipo texto en una DTD - (#PCDATA)
 
-Para declarar en una DTD un elemento que pueda contener texto analizable, se tiene que indicar que su contenido es (`#PCDATA`), (Parsed Character Data):
+Para declarar en una DTD un elemento que pueda contener texto analizable, se tiene que indicar que su contenido es `(#PCDATA)`, (Parsed Character Data):
 
 ```xml
 <!ELEMENT texto (#PCDATA)>
@@ -534,7 +533,7 @@ En vez de `<texto></texto>`, también se puede escribir `<texto/>`.
 {:.subsection}
 ### Secuencias de elementos en una DTD
 
-En una DTD, un elemento (padre) puede ser declarado para contener a otro u otros elementos (hijos). En la sintaxis, los hijos –también llamados sucesores– tienen que escribirse entre paréntesis `()` y separados por comas `,`.
+En una DTD, un elemento (padre) puede ser declarado para contener a otro u otros elementos (hijos). En la sintaxis, los hijos -también llamados sucesores- tienen que escribirse entre paréntesis `()` y separados por comas `,`.
 
 {:.subsection}
 #### Elemento con varios hijos
@@ -934,7 +933,7 @@ EJEMPLO En la DTD del siguiente documento XML se ha indicado que el elemento `f1
 
 Obsérvese que, en este ejemplo, el atributo equipo es obligatorio escribirlo, #REQUIRED. Mientras que, el atributo fecha_de_nacimiento es opcional, #IMPLIED.
 
-En una DTD, cuando se declara más de un atributo para un elemento –como se ha hecho en este caso– no es necesario escribir varias veces <!ATTLIST, pudiéndose escribir, por ejemplo:
+En una DTD, cuando se declara más de un atributo para un elemento -como se ha hecho en este caso- no es necesario escribir varias veces <!ATTLIST, pudiéndose escribir, por ejemplo:
 
 ```xml
 <!ATTLIST f1 pais CDATA "España"
@@ -1355,7 +1354,7 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que los elementos `anim
 </animales>
 ```
 
-En la DTD de este ejemplo se está indicando que los valores –datos– de las entidades (ballena y delfin) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `ballena.gif` y `delfin.gif`.
+En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (ballena y delfin) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `ballena.gif` y `delfin.gif`.
 Con NDATA (Notation Data) se ha asociado a las entidades ballena y delfin con la notación gif.
 La notación gif es una declaración del tipo MIME image/gif.
 
@@ -1392,7 +1391,7 @@ EJEMPLO En la DTD del siguiente documento XML, el atributo imagenes del elemento
 </animales>
 ```
 
-En la DTD de este ejemplo se está indicando que los valores –datos– de las entidades (ballena, delfin, elefante, leon y oso) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `ballena.gif`, `delfin.gif`, `elefante.gif`, `leon.gif` y `oso.gif`.
+En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (ballena, delfin, elefante, leon y oso) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos `ballena.gif`, `delfin.gif`, `elefante.gif`, `leon.gif` y `oso.gif`.
 Con NDATA (Notation Data) se ha asociado a las entidades ballena, delfin, elefante, leon y oso con la notación gif.
 La notación gif es una declaración del tipo MIME image/gif.
 
@@ -1437,7 +1436,7 @@ Inicialmente, para el elemento `sigla` se ha indicado el idioma inglés, `en`, p
 No obstante, después se ha fijado el valor `es`, del español, para el atributo xml:lang del elemento `traduccion`.
 Por otra parte, para el CERN se ha especificado que el idioma es el francés, `fr`.
 Uso del atributo xml:space
-En una DTD, el atributo xml:space permite indicar que los espacios en blanco, las tabulaciones y los retornos de carro que aparezcan en el contenido (texto) de un elemento –y sus sucesores a menos que se indique lo contrario con otra instancia de xml:space– tienen que ser preservados. Este atributo siempre tiene que ser declarado de tipo enumerado, siendo `default`, `preserve` o ambos, los posibles valores pertenecientes a la lista de valores que se indiquen entre paréntesis `()`.
+En una DTD, el atributo xml:space permite indicar que los espacios en blanco, las tabulaciones y los retornos de carro que aparezcan en el contenido (texto) de un elemento -y sus sucesores a menos que se indique lo contrario con otra instancia de xml:space- tienen que ser preservados. Este atributo siempre tiene que ser declarado de tipo enumerado, siendo `default`, `preserve` o ambos, los posibles valores pertenecientes a la lista de valores que se indiquen entre paréntesis `()`.
 
 EJEMPLO En la DTD del siguiente documento XML, con el atributo xml:space se ha indicado que, por defecto, los espacios que se escriban en el contenido de los elementos `programa` del documento, deben preservarse. Ahora bien, en la declaración de xml:space se ha indicado que su valor podría ser también `default`:
 
@@ -1629,7 +1628,7 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que el elemento `imagen
 <imagen fuente="logo"/>
 ```
 
-En la DTD de este ejemplo se está indicando que el valor –datos– de la entidad logo va a ser cargado desde una URI. En este caso, se hace referencia al archivo "logo.gif".
+En la DTD de este ejemplo se está indicando que el valor -datos- de la entidad logo va a ser cargado desde una URI. En este caso, se hace referencia al archivo "logo.gif".
 Con NDATA (Notation Data) se indica que la entidad no es analizable y, en este caso, se ha asociado a la entidad logo con la notación gif.
 La notación gif es una declaración del tipo MIME image/gif.
 Entidades generales externas no analizables públicas - PUBLIC
@@ -1897,7 +1896,7 @@ EJEMPLO En la DTD del siguiente documento XML, se indica que los elementos `frut
 </frutas>
 ```
 
-En la DTD de este ejemplo se está indicando que los valores –datos– de las entidades (manzana y naranaja) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos "manzana.gif" y "naranja.gif".
+En la DTD de este ejemplo se está indicando que los valores -datos- de las entidades (manzana y naranaja) van a ser cargados desde una URI (Uniform Resource Identifier, Identificador Uniforme de Recurso). En este caso, se hace referencia a los archivos externos "manzana.gif" y "naranja.gif".
 Con NDATA (Notation Data) se ha asociado a las entidades manzana y naranaja con la notación gif.
 La notación gif es una declaración del tipo MIME image/gif.
 EJEMPLO Si en el sistema existe, por ejemplo, un programa llamado "procesadorGIF.exe" en la carpeta `aplicaciones` capaz de procesar imágenes GIF (Graphics Interchange Format, Formato de Intercambio de Gráficos), también se podría escribir:
@@ -2054,7 +2053,7 @@ También sería válido el documento:
 </persona>
 ```
 
-Obsérvese que, en este ejemplo, en los dos documentos XML asociados a la DTD externa escrita en el archivo "persona.dtd", se ha indicado –por medio de IGNORE e INCLUDE– si el elemento `persona` tiene que contener 2 ó 4 hijos, es decir, (`nombre` y `edad`) o (`nombre`, `apellidos`, `edad` y `ciudad`).
+Obsérvese que, en este ejemplo, en los dos documentos XML asociados a la DTD externa escrita en el archivo "persona.dtd", se ha indicado -por medio de IGNORE e INCLUDE- si el elemento `persona` tiene que contener 2 ó 4 hijos, es decir, (`nombre` y `edad`) o (`nombre`, `apellidos`, `edad` y `ciudad`).
 
 {:.section}
 ## Espacios de nombres
