--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -623,9 +623,9 @@ En una DTD, para definir el número de veces que pueden aparecer los elementos d
 
 | Operador          | Cardinalidad | Significado                                                        |
 |-------------------|--------------|--------------------------------------------------------------------|
-| ? (interrogación) | 0-1          | El elemento es opcional, pudiendo aparecer una sola vez o ninguna. |
-| * (asterisco)     | 0-n          | El elemento puede aparecer cero, una o más veces.                  |
-| + (signo más)     | 1-n          | El elemento tiene que aparecer, obligatoriamente, una o más veces. |
+| `?` (interrogación) | 0-1          | El elemento es opcional, pudiendo aparecer una sola vez o ninguna. |
+| `*` (asterisco)     | 0-n          | El elemento puede aparecer cero, una o más veces.                  |
+| `+` (signo más)     | 1-n          | El elemento tiene que aparecer, obligatoriamente, una o más veces. |
 
 Nota: los elementos declarados en una DTD sobre los que no actúe ningún operador de cardinalidad, tendrán que aparecer obligatoriamente una única vez, en el o los documentos XML a los que se asocie.
 
