--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -72,7 +72,7 @@ EJEMPLO En un documento XML se quiere guardar una lista de marcadores de página
 
 Nota: al nombrar a los elementos `pagina` y `descripcion` no se han utilizado los caracteres (á) y (ó), respectivamente, para evitar posibles incompatibilidades con programas que puedan no reconocerlos.
 
-{:.subsection}
+{:.subsubsection}
 #### Visualización del archivo "marcadores-con-dtd-interna.xml" en un navegador web
 
 Al ver el archivo `marcadores-con-dtd-interna.xml`{: .filepath} en un navegador web, como por ejemplo Google Chrome, se visualizará algo similar a:
@@ -97,7 +97,7 @@ Existen dos tipos de DTD externa: privada y pública. Para las privadas se utili
 <!DOCTYPE elemento-raíz PUBLIC "identificador-público" "URI">
 ```
 
-{:.subsection}
+{:.subsubsection}
 #### DTD externa privada - SYSTEM
 
 EJEMPLO Si en un archivo llamado `marcadores.dtd`{: .filepath} se escribiese la siguiente DTD:
@@ -139,7 +139,7 @@ El siguiente documento XML llamado `marcadores-con-dtd-externa.xml`{: .filepath}
 
 En este documento XML, haciendo uso de una DTD externa privada, se ha escrito una lista de marcadores de páginas web, guardando de cada uno de ellos su nombre, una descripción y su URL.
 
-{:.subsection}
+{:.subsubsection}
 #### DTD externa pública - PUBLIC
 
 EJEMPLO El siguiente documento XML está asociado a una DTD externa pública:
@@ -396,7 +396,7 @@ Por ejemplo, el siguiente documento XML sería válido:
 </etiquetas_html>
 ```
 
-{:.subsection}
+{:.subsubsection}
 #### Un elemento vacío puede tener atributos
 
 EJEMPLO Aunque un elemento se declare vacío, no pudiendo contener texto ni otros elementos, sí puede tener atributos:
@@ -535,7 +535,7 @@ En vez de `<texto></texto>`, también se puede escribir `<texto/>`.
 
 En una DTD, un elemento (padre) puede ser declarado para contener a otro u otros elementos (hijos). En la sintaxis, los hijos -también llamados sucesores- tienen que escribirse entre paréntesis `()` y separados por comas `,`.
 
-{:.subsection}
+{:.subsubsection}
 #### Elemento con varios hijos
 
 EJEMPLO Para declarar un elemento (padre) que contenga tres elementos (hijos), se puede escribir:
@@ -584,7 +584,7 @@ A su vez, los hijos también pueden tener sus propios hijos. Así, el elemento `
 </persona>
 ```
 
-{:.subsection}
+{:.subsubsection}
 #### Orden de los hijos de un elemento
 
 En un documento XML, los elementos (hijos) de un elemento (padre), deben escribirse en el mismo orden en el que han sido declarados en la DTD.
@@ -629,7 +629,7 @@ En una DTD, para definir el número de veces que pueden aparecer los elementos d
 
 Nota: los elementos declarados en una DTD sobre los que no actúe ningún operador de cardinalidad, tendrán que aparecer obligatoriamente una única vez, en el o los documentos XML a los que se asocie.
 
-{:.subsection}
+{:.subsubsection}
 #### Operador de cardinalidad `+` (signo más)
 
 EJEMPLO En el siguiente documento XML, el elemento `nombre` tiene que aparecer una o más veces. En este caso, aparece tres veces:
@@ -651,7 +651,7 @@ EJEMPLO En el siguiente documento XML, el elemento `nombre` tiene que aparecer u
 Si sobre nombre no actuase el operador (+) el documento no sería válido, ya que, el elemento `personas` solo tendría que contener un elemento `nombre`.
 En vez de (nombre+), también se puede escribir (nombre)+.
 
-{:.subsection}
+{:.subsubsection}
 #### Operador de cardinalidad `*` (asterisco)
 
 EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el elemento `nombre` tiene que aparecer una única vez. Ahora bien, el elemento `ingrediente` tiene cardinalidad (0-n), por tanto, puede aparecer cero, una o más veces:
@@ -673,7 +673,7 @@ EJEMPLO En la DTD interna del siguiente documento XML, se ha indicado que el ele
 </receta_de_cocina>
 ```
 
-{:.subsection}
+{:.subsubsection}
 #### Operador de cardinalidad `?` (interrogación)
 
 EJEMPLO En la DTD del siguiente documento XML, la cardinalidad del elemento `mayor_de_edad` es (0-1), siendo opcional su aparición:
@@ -712,7 +712,7 @@ Así pues, el siguiente documento también es válido:
 
 En la DTD asociada a un documento XML, se pueden declarar elementos que contengan elementos opcionales. Para ello, se utiliza el operador de elección, representado por una barra vertical (`|`).
 
-{:.subsection}
+{:.subsubsection}
 #### Operador de elección `|` (barra vertical)
 
 EJEMPLO En el siguiente documento XML el elemento `articulo` puede contener un elemento `codigo` o un elemento `id`; obligatoriamente uno de ellos, pero no ambos:
@@ -730,7 +730,7 @@ EJEMPLO En el siguiente documento XML el elemento `articulo` puede contener un e
 </articulo>
 ```
 
-{:.subsection}
+{:.subsubsection}
 #### Operador de elección `|` y operador `*`
 
 EJEMPLO En la DTD del siguiente documento XML se indica que el elemento `articulos` puede contener varios elementos `codigo` e `id`:
@@ -763,7 +763,7 @@ Obsérvese que, con el operador `*`, en este ejemplo se ha indicado que el conte
 
 Nótese también que, dentro del elemento `articulos` pueden aparecer elementos `codigo` e `id` en cualquier orden.
 
-{:.subsection}
+{:.subsubsection}
 #### Operador de elección `|` en una secuencia de elementos
 
 EJEMPLO En el siguiente documento XML, pueden aparecer cero o más elementos `articulo` que contengan un elemento `codigo` o un elemento `id`, y obligatoriamente un elemento `nombre`:
@@ -790,7 +790,7 @@ EJEMPLO En el siguiente documento XML, pueden aparecer cero o más elementos `ar
 </articulos>
 ```
 
-{:.subsection}
+{:.subsubsection}
 #### Secuencia de elementos en una lista de opciones
 
 EJEMPLO En la DTD del siguiente documento XML se ha indicado que pueden aparecer cero o más elementos `localidad`. En el caso de aparecer, cada uno de ellos contendrá los elementos `pais` y `ciudad`, o alternativamente un elemento `codigo_postal`:
@@ -816,7 +816,7 @@ EJEMPLO En la DTD del siguiente documento XML se ha indicado que pueden aparecer
 </localidades>
 ```
 
-{:.subsection}
+{:.subsubsection}
 #### `#PCDATA` en una lista de opciones permite contenido mixto
 
 EJEMPLO Al utilizar el operador de elección (`|`) en una DTD, si una de las opciones es `#PCDATA`, esta debe escribirse en primer lugar:
