--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -70,7 +70,8 @@ EJEMPLO En un documento XML se quiere guardar una lista de marcadores de página
 - Escribiendo pagina (`nombre, descripcion, url`) se especifica que, cada elemento `pagina` tiene que contener tres elementos (hijos): `nombre`, `descripcion` y `url`.
 - Con `#PCDATA` (Parsed Character Data) escrito entre paréntesis `()` se indica que los elementos `nombre`, `descripcion` y `url` pueden contener texto (cadenas de caracteres) analizable por un procesador XML.
 
-Nota: al nombrar a los elementos `pagina` y `descripcion` no se han utilizado los caracteres (á) y (ó), respectivamente, para evitar posibles incompatibilidades con programas que puedan no reconocerlos.
+> Al nombrar a los elementos `pagina` y `descripcion` no se han utilizado los caracteres (á) y (ó), respectivamente, para evitar posibles incompatibilidades con programas que puedan no reconocerlos.
+{:.prompt-info}
 
 {:.subsubsection}
 #### Visualización del archivo "marcadores-con-dtd-interna.xml" en un navegador web
@@ -299,7 +300,8 @@ EJEMPLO En la DTD interna del siguiente documento XML, se ha declarado el elemen
 </persona>
 ```
 
-Nota: los elementos vacíos no pueden tener contenido, pero sí pueden tener atributos.
+> Los elementos vacíos no pueden tener contenido, pero sí pueden tener atributos.
+{:.prompt-info}
 
 **Un elemento puede definirse para contener contenido mixto - `ANY`**
 
@@ -627,7 +629,8 @@ En una DTD, para definir el número de veces que pueden aparecer los elementos d
 | `*` (asterisco)     | 0-n          | El elemento puede aparecer cero, una o más veces.                  |
 | `+` (signo más)     | 1-n          | El elemento tiene que aparecer, obligatoriamente, una o más veces. |
 
-Nota: los elementos declarados en una DTD sobre los que no actúe ningún operador de cardinalidad, tendrán que aparecer obligatoriamente una única vez, en el o los documentos XML a los que se asocie.
+> Los elementos declarados en una DTD sobre los que no actúe ningún operador de cardinalidad, tendrán que aparecer obligatoriamente una única vez, en el o los documentos XML a los que se asocie.
+{:.prompt-info}
 
 {:.subsubsection}
 #### Operador de cardinalidad `+` (signo más)
