--- a/_posts/2024-01-20-dtd.md
+++ b/_posts/2024-01-20-dtd.md
@@ -2,7 +2,7 @@
 title: "DTD"
 date: 2024-01-20 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
-tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, desarrollo de aplicaciones web, dam, daw, asir, lmsgi, xml, teoría]
+tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, desarrollo de aplicaciones web, dam, daw, asir, lmsgi, xml, teoría, dtd]
 img_path: /assets/img/dtd/
 ---
 
@@ -1647,7 +1647,7 @@ Las entidades no analizables pueden contener cualquier tipo de datos (no XML). P
 {:.subsubsection}
 #### Entidades generales externas no analizables privadas - SYSTEM
 
-EJEMPLO En la DTD del siguiente documento XML, se indica que el elemento `imagen` que se escriba, tiene que incluir obligatoriamente el atributo fuente, cuyo valor será una entidad:
+EJEMPLO En la DTD del siguiente documento XML, se indica que el elemento `imagen` que se escriba, tiene que incluir obligatoriamente el atributo `fuente`, cuyo valor será una entidad:
 
 ```xml
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
