--- a/_posts/2024-01-21-xsd.md
+++ b/_posts/2024-01-21-xsd.md
@@ -1,5 +1,5 @@
 ---
-title: "XML Schema o XSD"
+title: "XSD (XML Schema Definition)"
 date: 2024-01-21 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, desarrollo de aplicaciones web, dam, daw, asir, lmsgi, xml, teoría, xsd, xml schema]
